// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"import * as React from 'react';

const MyComponent = () => <main>{<svg><g /></svg>}</main>;

export default MyComponent;"
`;

exports[` 2`] = `
"import * as React from 'react';

const MyComponent = () => <main>{<svg><g /></svg>}</main>;

export default MyComponent;"
`;

exports[`plugin javascript custom templates support basic template 1`] = `
"import * as React from 'react';

const MyComponent = () => <svg><g /></svg>;

export default MyComponent;"
`;

exports[`plugin javascript custom templates supports TypeScript template 1`] = `
"import * as React from 'react';

const MyComponent = (props: React.SVGProps<SVGSVGElement>) => <svg><g /></svg>;

export default MyComponent;"
`;

exports[`plugin javascript custom templates supports template that does not return an array 1`] = `"<svg><g /></svg>;"`;

exports[`plugin javascript transforms whole program 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with "expandProps" add props 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with "memo" option wrap component in "React.memo" 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

const MemoSvgComponent = React.memo(SvgComponent);
export default MemoSvgComponent;"
`;

exports[`plugin javascript with "namedExport" option and "previousExport" state has custom named export 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

export default \\"logo.svg\\";
export { SvgComponent as Component };"
`;

exports[`plugin javascript with "native" option adds import from "react-native-svg" 1`] = `
"import * as React from \\"react\\";
import Svg from \\"react-native-svg\\";

function SvgComponent() {
  return <Svg><g /></Svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with "native.expo" option adds import from "react-native-svg" & from "expo" 1`] = `
"import * as React from \\"react\\";
import \\"expo\\";

function SvgComponent() {
  return <Svg><g /></Svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with "ref" and "expandProps" option expands props 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props, svgRef) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`plugin javascript with "ref" option adds ForwardRef component 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props, svgRef) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`plugin javascript with "titleProp" adds "titleProp" and "titleId" prop 1`] = `
"import * as React from \\"react\\";

function SvgComponent({
  title,
  titleId
}) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with "titleProp" and "expandProps" adds "titleProp", "titleId" props and expands props 1`] = `
"import * as React from \\"react\\";

function SvgComponent({
  title,
  titleId,
  ...props
}) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin javascript with both "memo" and "ref" option wrap component in "React.memo" and "React.forwardRef" 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props, svgRef) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
const MemoForwardRef = React.memo(ForwardRef);
export default MemoForwardRef;"
`;

exports[`plugin typescript custom templates support basic template 1`] = `
"import * as React from 'react';

const MyComponent = () => <svg><g /></svg>;

export default MyComponent;"
`;

exports[`plugin typescript custom templates supports TypeScript template 1`] = `
"import * as React from 'react';

const MyComponent = (props: React.SVGProps<SVGSVGElement>) => <svg><g /></svg>;

export default MyComponent;"
`;

exports[`plugin typescript custom templates supports template that does not return an array 1`] = `"<svg><g /></svg>;"`;

exports[`plugin typescript transforms whole program 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with "expandProps" add props 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props: React.SVGProps<SVGSVGElement>) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with "memo" option wrap component in "React.memo" 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

const MemoSvgComponent = React.memo(SvgComponent);
export default MemoSvgComponent;"
`;

exports[`plugin typescript with "namedExport" option and "previousExport" state has custom named export 1`] = `
"import * as React from \\"react\\";

function SvgComponent() {
  return <svg><g /></svg>;
}

export default \\"logo.svg\\";
export { SvgComponent as Component };"
`;

exports[`plugin typescript with "native" option adds import from "react-native-svg" 1`] = `
"import * as React from \\"react\\";
import Svg from \\"react-native-svg\\";

function SvgComponent() {
  return <Svg><g /></Svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with "native.expo" option adds import from "react-native-svg" & from "expo" 1`] = `
"import * as React from \\"react\\";
import \\"expo\\";

function SvgComponent() {
  return <Svg><g /></Svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with "ref" and "expandProps" option expands props 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props: React.SVGProps<SVGSVGElement>, svgRef?: React.Ref<SVGSVGElement>) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`plugin typescript with "ref" option adds ForwardRef component 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props: {}, svgRef?: React.Ref<SVGSVGElement>) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`plugin typescript with "titleProp" adds "titleProp" and "titleId" prop 1`] = `
"import * as React from \\"react\\";
interface SVGRProps {
  title?: string,
  titleId?: string,
}

function SvgComponent({
  title,
  titleId
}: SVGRProps) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with "titleProp" and "expandProps" adds "titleProp", "titleId" props and expands props 1`] = `
"import * as React from \\"react\\";
interface SVGRProps {
  title?: string,
  titleId?: string,
}

function SvgComponent({
  title,
  titleId,
  ...props
}: React.SVGProps<SVGSVGElement> & SVGRProps) {
  return <svg><g /></svg>;
}

export default SvgComponent;"
`;

exports[`plugin typescript with both "memo" and "ref" option wrap component in "React.memo" and "React.forwardRef" 1`] = `
"import * as React from \\"react\\";

function SvgComponent(props: {}, svgRef?: React.Ref<SVGSVGElement>) {
  return <svg><g /></svg>;
}

const ForwardRef = React.forwardRef(SvgComponent);
const MemoForwardRef = React.memo(ForwardRef);
export default MemoForwardRef;"
`;
